# ot_app

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig
.devcontainer/: devcontainer.json
.doc/: info.txt
app/ot_app/: CMakeLists.txt
app/ot_app/inc/: ot_app.h  ot_app_buffer.h  ot_app_coap.h  ot_app_coap_uri.h  ot_app_coap_uri_obs.h  ot_app_dataset_tlv.h  ot_app_deviceName.h  ot_app_dns.h  ot_app_drv.h  ot_app_msg_tlv.h  ot_app_pair.h  ot_app_srp_client.h  ot_app_version.h.in
app/ot_app/port/: ot_app_port_nvs.h  ot_app_port_openthread.h  ot_app_port_rtos.h
app/ot_app/src/: ot_app.c  ot_app_buffer.c  ot_app_coap.c  ot_app_coap_uri.c  ot_app_coap_uri_obs.c  ot_app_dns.c  ot_app_drv.c  ot_app_msg_tlv.c  ot_app_pair.c
app/ot_app_devices/ad_mqtt_gateway/inc/: ad_gateway.h  ad_gateway_drv.h  ad_gateway_drv_esp32.h
app/ot_app_devices/ad_mqtt_gateway/src/: ad_gateway.c  ad_gateway_drv_esp32.c
app/ot_app_devices/cd_button/inc/: ad_btn_assign.h  ad_btn_dimControl.h  ad_btn_uri.h  ad_button.h
app/ot_app_devices/cd_button/src/: ad_btn_assign.c  ad_button.c
app/ot_app_devices/ed_light/inc/: ad_light.h
app/ot_app_devices/ed_light/src/: ad_light.c
app/ot_app_devices_example/cd_button/inc/: ad_btn_uri.h  ad_button.h
app/ot_app_devices_example/cd_button/src/: ad_btn_assign.c
app/ot_app_devices_example/ed_light/inc/: ad_light_control.h  ad_light_uri.h
app/utils/: hro_utils.h
app_devices/template/src/: ad_temp.c
components/OneButton_Lib/: OneButton.c  OneButton.h
components/app_devices/cd_button/inc/: ad_btn_assign.h  ad_btn_dimControl.h  ad_btn_uri.h  ad_button.h
components/app_devices/cd_button/src/: ad_btn_assign.c  ad_btn_dimControl.c  ad_btn_uri.c  ad_button.c
components/app_devices/ed_light/inc/: ad_light.h  ad_light_control.h  ad_light_uri.h
components/app_devices/ed_light/src/: ad_light.c  ad_light_uri.c
components/app_devices/kconfigs/: kconfig.borderRouter  kconfig.controlPanel  kconfig.controllerORSensor
components/app_devices/template/inc/: ad_temp.h
components/app_devices/template/src/: ad_temp.c
components/libs/OneButton_Lib/: CMakeLists.txt  OneButton.c  OneButton.h
components/libs/open_thread/thread_udp/: CMakeLists.txt
components/libs/spiffs_lib/: CMakeLists.txt
components/libs/spiffs_lib/inc/: spiffs.h
components/libs/spiffs_lib/src/: spiffs.c
components/libs/srv_app/: CMakeLists.txt
components/libs/srv_app/inc/: web_app.h  web_app_parser.h
components/libs/srv_app/src/: web_app.c  web_app_parser.c  wifi.c
components/libs/ws2812b/: CMakeLists.txt
components/libs/ws2812b/inc/: ws2812b_drv.h  ws2812b_drv_RMT.h  ws2812b_fx.h  ws2812b_if.h  ws2812b_if_RMT.h
components/libs/ws2812b/src/: ws2812b_drv_RMT.c  ws2812b_fx.c  ws2812b_if_RMT.c
components/open_thread/ot_app/: CMakeLists.txt
components/open_thread/ot_app/inc/: ot_app.h  ot_app_coap.h  ot_app_coap_uri.h  ot_app_coap_uri_obs.h  ot_app_dataset_tlv.h  ot_app_deviceName.h  ot_app_dns.h  ot_app_drv.h  ot_app_nvs.h  ot_app_pair.h  ot_app_srp_client.h
components/open_thread/ot_app/port/: ot_app_port_openthread.c  ot_app_port_openthread.h  ot_app_port_rtos.h
components/open_thread/ot_cli_config/: CMakeLists.txt
components/open_thread/ot_cli_config/inc/: esp_ot_cli.h
components/open_thread/ot_cli_config/src/: esp_ot_cli.c
components/open_thread/ot_cli_extension/: CMakeLists.txt
components/softTimer_lib/: softTimers.c  softTimers.h
components/spiffs_data/: index.html
components/spiffs_lib/inc/: spiffs.h
components/srv_app/: CMakeLists.txt
components/srv_app/inc/: web_app_parser.h  wifi.h
components/sys/timers/: CMakeLists.txt  xtimers.c  xtimers.h
components/utils/: CMakeLists.txt  hro_utils.h  utils.c  utils.h
components/ws2812b/inc/: ws2812b_drv_RMT.h  ws2812b_if.h
devices/: kconfig.borderRouter  kconfig.controlPanel  kconfig.controllerORSensor
docs/: Architecture_and_Design_Patterns.dox  Doxyfile  LICENSE.dox  getting_started.dox  mainPage.dox  otapp_devices.dox  otapp_libs_utils.dox  otapp_modules.dox
libs/OneButton_Lib/: OneButton.c  OneButton.h
libs/softTimer_lib/: softTimers.h
libs/ws2812b/: CMakeLists.txt
libs/ws2812b/inc/: ws2812b_drv_RMT.h  ws2812b_drv_tim_dma_stm32.h  ws2812b_fx.h  ws2812b_if.h
libs/ws2812b/src/: ws2812b_drv_RMT.c  ws2812b_drv_tim_dma_stm32.c  ws2812b_fx.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h
sys/timers/: xtimers.c
tests/unit_test/: CMakeLists.txt  README.md  ctest_add_tests.cmake  ctest_list.cmake
tests/unit_test/HOST_ot_app_buffer_test/: CMakeLists.txt  ot_app_buffer_main.c  ot_app_buffer_runner.c  ot_app_buffer_test.c
tests/unit_test/HOST_ot_app_coap_uri_obs_test/: CMakeLists.txt  ot_app_coap_uri_obs_test.c  ot_app_coap_uri_obs_test_main.c  ot_app_coap_uri_obs_test_runner.c
tests/unit_test/HOST_ot_app_common/mocks/: mock_freertos_queue.c  mock_freertos_semaphore.h  mock_freertos_semaphore_pthread.c  mock_freertos_semaphore_pthread.h  mock_freertos_task.c  mock_freertos_task.h  mock_ip6.h  mock_mocks.c  mock_mocks.h  mock_ot_app.h  mock_ot_app_coap.c  mock_ot_app_coap.h  mock_ot_app_deviceName.c  mock_ot_app_deviceName.h  mock_ot_message.c  mock_ot_message.h
tests/unit_test/HOST_ot_app_deviceName_test/: CMakeLists.txt  ot_app_deviceName_test.c  ot_app_deviceName_test_main.c  ot_app_deviceName_test_runner.c
tests/unit_test/HOST_ot_app_msg_tlv/: CMakeLists.txt  ot_app_msg_tlv_runner.c  ot_app_msg_tlv_test.c  ot_app_msg_tlv_test_main.c
tests/unit_test/HOST_ot_app_pair_test/: CMakeLists.txt  ot_app_pair_rtos_test.c  ot_app_pair_test.c  ot_app_pair_test_main.c  ot_app_pair_test_runner.c  ot_app_pair_uri_test.c
tests/unit_test/HOST_ot_app_pair_test/mocks/: mock_freertos_queue.h  mock_ip6.h  mock_ot_app.h  mock_ot_app_coap.h
tests/unit_test/HOST_template_test/: CMakeLists.txt  mock_template.h  template_test.c  template_test_main.c  template_test_runner.c
tests/unit_test/HOST_template_test/mocks/: mock_template.c
tests/unit_test/HW_template_test/: CMakeLists.txt  Makefile  template_test.c  test_runner.c
utils/: hro_utils.h
(+29 files in other folders)
